# codingrogue

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: github-actions.yml
automation/: add_problem.py
automation/boilerplate/: cookiecutter.json
automation/boilerplate/{{cookiecutter.problem_type}}/{{cookiecutter.problem_title}}/: solution.py  test_solution.py
rogue/algorithm/components_in_graph/: solution.py  test_solution.py
rogue/pandas/groupby/: solution.py  test_solution.py
